bynkc/tests/fixtures/positive/39_match_simple/input.karn
commons test {
  type Status = enum { Pending, Active, Done }

  fn describe(s: Status) -> String {
    match s {
      Pending => "waiting"
      Active => "running"
      Done => "finished"
    }
  }
}
