bynkc/tests/fixtures/negative/35_match_unreachable_arm/input.karn
commons test {
  type Status = enum { Pending, Active, Done }

  fn bad(s: Status) -> String {
    match s {
      _ => "default"
      Pending => "p"
    }
  }
}
